objects/Sleep_Survey__c.object
<CustomObject>
    <fields>
        <fullName>After_minutes_I_get_up_Free_Days__c</fullName>
        <description>After ___ minutes, I get up. Free Days:</description>
        <label>SLEEP_v1.0.16</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>After_minutes_I_get_up_Work_Days__c</fullName>
        <description>After ___ minutes, I get up. Work Days:</description>
        <label>SLEEP_v1.0.15</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Are_there_particular_reasons_why_you_can__c</fullName>
        <description>Are there particular reasons why you cannot freely choose your wake-up times on Free Days?</description>
        <label>SLEEP_v1.0.20</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Sleep_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Do_you_consider_yourself_to_be_a_morning__c</fullName>
        <description>Do you consider yourself to be a morning person?</description>
        <label>SLEEP_v1.0.1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_you_have_any_other_types_of_sleep__c</fullName>
        <description>Do you have any other types of sleep disorders? (examples: sleep walking, sleep apnea, etc.)</description>
        <label>SLEEP_v1.0.3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_you_regularly_wake_up_BEFORE__c</fullName>
        <description>Do you regularly wake up BEFORE the alarm rings on Work Days?</description>
        <label>SLEEP_v1.0.18</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_you_suffer_from_insomnia__c</fullName>
        <description>Do you suffer from insomnia (an inability to fall asleep or to stay asleep as long as desired)?</description>
        <label>SLEEP_v1.0.2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>How_many_days_do_you_work_each_week__c</fullName>
        <description>How many days do you work each week? This includes being a freelancer, homemaker, stay-at-home parent or student.</description>
        <label>SLEEP_v1.0.6</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_many_hours_u_sleep_during_past_4_wee__c</fullName>
        <description>On average, how many hours did you sleep each night during the past 4 weeks?</description>
        <label>SLEEP_v1.0.22</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>How_often_4_weeks_u_awake_during_sleep__c</fullName>
        <description>How often during past 4 weeks did you awaken during your sleep time and have trouble falling asleep again?</description>
        <inlineHelpText>How often during past 4 weeks did you awaken during your sleep time and have trouble falling asleep again?</inlineHelpText>
        <label>SLEEP_v1.0.27</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_often_during_past_4_weeks_you_snore__c</fullName>
        <description>How often during past 4 weeks did you snore during your sleep?</description>
        <inlineHelpText>How often during past 4 weeks did you snore during your sleep?</inlineHelpText>
        <label>SLEEP_v1.0.29</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_often_past_4_weeks_you_feel_drowsy__c</fullName>
        <description>How often during past 4 weeks did you feel drowsy or sleepy during the day?</description>
        <inlineHelpText>How often during past 4 weeks did you feel drowsy or sleepy during the day?</inlineHelpText>
        <label>SLEEP_v1.0.32</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_often_past_4_weeks_you_get_sleep__c</fullName>
        <description>How often during the past 4 weeks did you get enough sleep to feel rested upon waking in the morning?</description>
        <inlineHelpText>How often during the past 4 weeks did you get enough sleep to feel rested upon waking in the morning?</inlineHelpText>
        <label>SLEEP_v1.0.24</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_often_past_4_weeks_you_take_naps__c</fullName>
        <description>How often during past 4 weeks did you take naps (5 minutes or longer) during the day?</description>
        <inlineHelpText>How often during past 4 weeks did you take naps (5 minutes or longer) during the day?</inlineHelpText>
        <label>SLEEP_v1.0.30</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_often_past_u_awake_short_breath__c</fullName>
        <description>How often during past 4 weeks did you awaken short of breath or with a headache?</description>
        <inlineHelpText>How often during past 4 weeks did you awaken short of breath or with a headache?</inlineHelpText>
        <label>SLEEP_v1.0.25</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_often_trouble_stay_awake_during_day__c</fullName>
        <description>How often during past 4 weeks did you have trouble staying awake during the day?</description>
        <inlineHelpText>How often during past 4 weeks did you have trouble staying awake during the day?</inlineHelpText>
        <label>SLEEP_v1.0.28</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_often_u_feel_trouble_falling_asleep__c</fullName>
        <description>How often did you feel have trouble falling asleep?</description>
        <inlineHelpText>How often did you feel have trouble falling asleep?</inlineHelpText>
        <label>SLEEP_v1.0.26</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_often_u_get_amount_of_sleep_u_needed__c</fullName>
        <description>How often during past 4 weeks did you get the amount of sleep you needed?</description>
        <inlineHelpText>How often during past 4 weeks did you get the amount of sleep you needed?</inlineHelpText>
        <label>SLEEP_v1.0.31</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_often_your_sleep_was_not_quiet__c</fullName>
        <description>How often during the past 4 weeks did you feel that your sleep was not quiet (restless, feeling tense, speaking, etc… while sleeping)?</description>
        <inlineHelpText>How often during the past 4 weeks did you feel that your sleep was not quiet (restless, feeling tense, speaking, etc… while sleeping)?</inlineHelpText>
        <label>SLEEP_v1.0.23</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>I_go_to_bed_at_Free_Days__c</fullName>
        <description>I go to bed at… Free Days:</description>
        <label>SLEEP_v1.0.8</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>I_go_to_bed_at_Work_Days__c</fullName>
        <description>I go to bed at… Work Days:</description>
        <label>SLEEP_v1.0.7</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>I_typically_need_minutes_Free_Days__c</fullName>
        <description>I typically need ___ minutes to fall asleep: Free Days:</description>
        <label>SLEEP_v1.0.12</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>I_typically_need_minutes_Work_Days__c</fullName>
        <description>I typically need ___ minutes to fall asleep: Work Days:</description>
        <label>SLEEP_v1.0.11</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>I_use_an_alarm_clock_on_free_days__c</fullName>
        <description>I use an alarm clock on Free Days:</description>
        <label>SLEEP_v1.0.19</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>I_use_an_alarm_on_workdays__c</fullName>
        <description>I use an alarm on Work Days:</description>
        <label>SLEEP_v1.0.17</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>I_wake_up_at_Free_Days__c</fullName>
        <description>I wake up at: Free Days:</description>
        <label>SLEEP_v1.0.14</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>I_wake_up_at_Work_Days__c</fullName>
        <description>I wake up at: Work Days:</description>
        <label>SLEEP_v1.0.13</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <description>Please check the reasons why you cannot freely choose your wake-up times on Free Days. Check all that apply.</description>
        <inlineHelpText>Please check the reasons why you cannot freely choose your wake-up times on Free Days. Check all that apply.</inlineHelpText>
        <label>SLEEP_v1.0.33</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Please_check_the_reasons_why_you_cannot__c</fullName>
        <description>Please check the reasons why you cannot freely choose your wake-up times on Free Days. Check all that apply.</description>
        <label>SLEEP_v1.0.21</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Some_people_stay_awake_for_some_Free_Day__c</fullName>
        <description>Some people stay awake for some time after they go to bed (reading, watching TV, etc). I actually get ready to fall asleep at: Free Days:</description>
        <label>SLEEP_v1.0.10</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Some_people_stay_awake_for_some_Work_Day__c</fullName>
        <description>Some people stay awake for some time after they go to bed (reading, watching TV, etc). I actually get ready to fall asleep at: Work Days:</description>
        <label>SLEEP_v1.0.9</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_types_of_sleep_disorders_do_you__c</fullName>
        <description>What types of sleep disorders do you have? Please check all that apply:</description>
        <label>SLEEP_v1.0.4</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sleep_disorders_Other__c</fullName>
        <description>Other (please specify):</description>
        <label>SLEEP_v1.0.5</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <label>SLEEP</label>
    <nameField>
        <displayFormat>SLEEP-{0000000000}</displayFormat>
        <label>SLEEP Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SLEEPs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>